# qt-calculator

./: .gitattributes  .gitignore  CMakeLists.txt  Calculator.cpp  Calculator.h  README.md  build.sh  main.cpp  qt-project.pro
.github/workflows/: build.yml  cmake-single-platform.yml
